--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -24,12 +24,110 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 78,
             "id": "34720ab6",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>Normal distribution</th>\n",
+                            "      <th>ChiSquare distribution</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>count</th>\n",
+                            "      <td>100.000000</td>\n",
+                            "      <td>100.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>mean</th>\n",
+                            "      <td>0.093975</td>\n",
+                            "      <td>3.151517</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>std</th>\n",
+                            "      <td>0.938360</td>\n",
+                            "      <td>2.611254</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>min</th>\n",
+                            "      <td>-2.351328</td>\n",
+                            "      <td>0.047675</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>25%</th>\n",
+                            "      <td>-0.620938</td>\n",
+                            "      <td>1.171289</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>50%</th>\n",
+                            "      <td>0.182832</td>\n",
+                            "      <td>2.345260</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>75%</th>\n",
+                            "      <td>0.619512</td>\n",
+                            "      <td>4.427933</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>max</th>\n",
+                            "      <td>2.323402</td>\n",
+                            "      <td>16.128419</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ],
+                        "text/plain": [
+                            "       Normal distribution  ChiSquare distribution\n",
+                            "count           100.000000              100.000000\n",
+                            "mean              0.093975                3.151517\n",
+                            "std               0.938360                2.611254\n",
+                            "min              -2.351328                0.047675\n",
+                            "25%              -0.620938                1.171289\n",
+                            "50%               0.182832                2.345260\n",
+                            "75%               0.619512                4.427933\n",
+                            "max               2.323402               16.128419"
+                        ]
+                    },
+                    "execution_count": 78,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
-                "# TODO"
+                "import numpy as np\n",
+                "import pandas as pd\n",
+                "\n",
+                "data = np.random.normal(loc = 0, scale=1, size=100)\n",
+                "data2 = np.random.chisquare(df=3, size=100)\n",
+                "\n",
+                "df = pd.DataFrame(data)\n",
+                "df.columns = [\"Normal distribution\"]\n",
+                "\n",
+                "df[\"ChiSquare distribution\"] = data2\n",
+                "\n",
+                "df.describe()"
             ]
         },
         {
@@ -48,12 +146,40 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 83,
             "id": "d590308e",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Desviación Estandar: 2.23606797749979\n"
+                    ]
+                }
+            ],
             "source": [
-                "# TODO"
+                "data = [4, 2, 5, 8, 6]\n",
+                "\n",
+                "from math import sqrt\n",
+                "\n",
+                "def Mean (valores):\n",
+                "    sum = 0\n",
+                "    for i in valores:\n",
+                "        sum += i\n",
+                "    return sum / len(valores)\n",
+                "\n",
+                "def Deviation(values, mean):\n",
+                "    sum = 0\n",
+                "    for i in values:\n",
+                "        sum += (i - mean) ** 2\n",
+                "    rad = sum / (len(values) - 1)\n",
+                "    return sqrt(rad)\n",
+                "\n",
+                "meanvalue = Mean(data)\n",
+                "\n",
+                "\n",
+                "print(f\"Desviación Estandar: {Deviation(data, meanvalue)}\")\n"
             ]
         }
     ],
